--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
-    <string name="app_name">Headline News Maker</string>
+    <string name="app_name">Headline Maker</string>
     <string name="tagline">For Fun</string>
+
+    <string name="headline">What Headline Will\nYou Craft Today</string>
+    <string name="headline_desc">makes it easy to create headline\ndesign and share or print them</string>
+    <string name="start_create_headline">Start Create Headline</string>
+    <string name="headline_history">Headline History</string>
+
+    <string name="empty_state_title">Create Your First Headline</string>
+    <string name="empty_state_desc">Time to be a news maker.\nWrite your first headline now.</string>
+
 </resources>
