--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,18 +8,27 @@
     <string name="headline_desc">makes it easy to create headline\ndesign and share or print them</string>
     <string name="start_create_headline">Start Create Headline</string>
     <string name="headline_history">Headline History</string>
+    <string name="create_headline_title">Create your headline</string>
 
     <!-- Create News  -->
     <string name="headline">Headline</string>
     <string name="input_headline">Input Headline...</string>
+    <string name="description_optional">Description (Optional)</string>
+    <string name="description">Description</string>
+    <string name="input_description">Input Description...</string>
     <string name="author">Author</string>
+    <string name="author_optional">Author (Optional)</string>
     <string name="input_author">Input Author...</string>
     <string name="datetime">Datetime</string>
     <string name="input_datetime">Input Datetime...</string>
+    <string name="download">Download</string>
+    <string name="download_success">Success Download</string>
+    <string name="download_failed">Failed Download</string>
 
     <!-- Common  -->
     <string name="create_now">Create Now</string>
     <string name="preview_now">Preview Now</string>
+    <string name="preview">Preview</string>
     <string name="please_input_data">Please input data</string>
     <string name="empty_state_title">Create Your First Headline</string>
     <string name="empty_state_desc">Time to be a news maker.\nWrite your first headline now.</string>
