create : wording, assets and style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,13 @@
     <string name="download">Download</string>
     <string name="download_success">Success Download</string>
     <string name="download_failed">Failed Download</string>
+    <string name="save">Save</string>
+    <string name="text">Text</string>
+    <string name="done">Done</string>
+    <string name="choose_or_take_photo">Choose or Take Photo</string>
 
     <!-- Common  -->
+    <string name="create_headline">Create Headline</string>
     <string name="create_now">Create Now</string>
     <string name="preview_now">Preview Now</string>
     <string name="preview">Preview</string>
@@ -37,5 +42,15 @@
     <string name="headline_title_sample">A software engineer worked at Tesla, SAP, and Salesforce. Here\'s how he negotiated his salary, including a $520,000 Meta offer.</string>
     <string name="author_sample">Himawan</string>
     <string name="date_sample">5 june 2024</string>
+
+    <!-- Permission  -->
+    <string name="core_permission_deny_camera" translatable="false">You disable camera permission, maybe some feature will not working.</string>
+    <string name="core_permission_deny_camera_and_storage" translatable="false">You disable camera or storage permission, maybe some feature will not working.</string>
+    <string name="core_permission_deny_storage" translatable="false">You disable storage permission, maybe some feature will not working.</string>
+    <string name="core_permission_open_settings">Open Settings</string>
+    <string name="core_permission_cancel">Cancel</string>
+    <string name="core_rationale_storage" translatable="false">This app needs access to your storage.</string>
+    <string name="core_rationale_camera" translatable="false">This app needs access to your camera.</string>
+    <string name="core_rationale_camera_and_storage" translatable="false">This app needs access to your camera and storage.</string>
 
 </resources>
