--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="description_optional">Description (Optional)</string>
     <string name="description">Description</string>
     <string name="input_description">Input Description...</string>
+    <string name="input_watermark">Input Watermark...</string>
     <string name="author">Author</string>
     <string name="author_optional">Author (Optional)</string>
     <string name="input_author">Input Author...</string>
@@ -39,6 +40,9 @@
     <string name="please_input_data">Please input data</string>
     <string name="empty_state_title">Create Your First Headline</string>
     <string name="empty_state_desc">Time to be a news maker.\nWrite your first headline now.</string>
+    <string name="your_headline_text_here">Your Headline Text Here</string>
+    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
+
 
     <!-- Sample  -->
     <string name="headline_title_sample">A software engineer worked at Tesla, SAP, and Salesforce. Here\'s how he negotiated his salary, including a $520,000 Meta offer.</string>
